components/envoy/envs/management/redirect-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway-system
spec:
  hostnames:
    - "reduce.isis.cclrc.ac.uk"
